# rust-udp-file-transfer-system

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_android.sh  build_client.sh  build_client_gui.bat  build_client_gui.sh  build_container.sh  build_debug.sh  build_release.sh  build_server.sh  builder.Dockerfile  client.Dockerfile  dep-cache.Dockerfile  run_client.bat  run_client.sh  run_client_gui.bat  run_client_gui.sh  run_demo.sh  run_server.bat  run_server.sh  runtime.Dockerfile  server.Dockerfile
android-app/: README.md  local.properties  my-release-key.jks  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/filetransfersystem/: MainActivity.kt  RustUploaderLib.kt  UploadWorker.kt
android-app/app/src/main/java/uniffi/rust_core/: rust_core.kt
client_cli/: Cargo.toml
client_cli/src/: main.rs
client_gui/: README.md  package-lock.json  package.json
client_gui/src/: index.html  main.js  styles.css
client_gui/src-tauri/: Cargo.toml  tauri.conf.json
client_gui/src-tauri/src/: lib.rs  main.rs
client_lib/: Cargo.toml
client_lib/src/: lib.rs
common/src/: lib.rs
docker/: run_client.sh  run_server.sh
docs/: README.md  android_integration.md  deployment_guide.md  prompt.txt  protocol_spec.md  udp_transfer_system.md
podman/: run_client.sh  run_server.sh
scripts/: run_server_linux.sh  run_server_macos.sh  run_server_windows.bat  send_file_linux.sh  send_file_macos.sh  send_file_windows.bat
server/: Cargo.toml
server/src/: main.rs
tests/: run_tests.sh  test_password.sh
